--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body{
   margin: 0px;
+  transition: all 0.5s;
 }
-.text-light{color: black;}
-.background-light{background-color: rgb(132, 144, 255) !important;}
-.text-dark{color: white;}
-.background-dark{background-color: rgb(117, 237, 245) !important;}
+.text-light{transition: all 0.5s; color: black !important;}
+.background-light{transition: all 0.5s; background-color: rgb(132, 144, 255) !important;}
+.text-dark{transition: all 0.5s; color: white !important;}
+.background-dark{transition: all 0.5s; background-color: rgb(117, 237, 245) !important;}
